fixed github icon size on mobile

--- a/css/main.css
+++ b/css/main.css
@@ -506,7 +506,7 @@ and (max-device-width : 667px) {
     }
     
     .github-icon {
-        font-size: 7rem;
+        font-size: 8rem;
         color: #a0f;
     }
     
